<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.0"
        android:background="@drawable/loginpic1"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30.0dip"
            android:background="@drawable/njau2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10.0dip"
            android:text="@string/login_name"
            android:textColor="#0D40E8"
            android:textSize="25dip" />

        <RelativeLayout
            android:id="@+id/RelativeLayout02"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15.0px"
            android:layout_marginRight="15.0px"
            android:layout_marginTop="20.0px"
            android:background="@drawable/login_back"
            android:paddingBottom="10.0px"
            android:paddingTop="21.0px" >

            <ImageView
                android:id="@+id/faceImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/login_head" />

            <EditText
                android:id="@+id/login_edit_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="5.0px"
                android:layout_marginLeft="5.0dip"
                android:layout_marginRight="5.0dip"
                android:layout_marginTop="5.0dip"
                android:layout_toRightOf="@+id/faceImg"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputAccHint"
                android:maxLength="10"
                android:paddingLeft="45.0sp"
                android:singleLine="true"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_account"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignTop="@+id/login_edit_account"
                android:layout_marginRight="15.0sp"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strAccInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <EditText
                android:id="@+id/login_edit_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/login_edit_account"
                android:layout_alignRight="@+id/login_edit_account"
                android:layout_below="@+id/login_edit_account"
                android:layout_marginRight="1.0dip"
                android:background="@drawable/qq_edit_login"
                android:hint="@string/strInputAccpp"
                android:inputType="textPassword"
                android:maxLength="16"
                android:paddingLeft="45.0dip"
                android:saveEnabled="true" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/login_edit_pwd"
                android:layout_alignRight="@+id/TextView01"
                android:layout_alignTop="@+id/login_edit_pwd"
                android:gravity="center_vertical"
                android:paddingLeft="7.0sp"
                android:text="@string/strPswInputLabel"
                android:textColor="#ff3f3f3f"
                android:textSize="16.0dip" />

            <CheckBox
                android:id="@+id/login_cb_savepwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/TextView02"
                android:layout_marginLeft="70dip"
                android:button="@drawable/qq_btn_check"
                android:paddingLeft="40px"
                android:text="@string/opt_remember"
                android:textColor="#ff222222"
                android:textSize="15.0sp" />

            <Button
                android:id="@+id/login_btn_login"
                android:layout_width="100.0dip"
                android:layout_height="30.0dip"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/TextView02"
                android:layout_marginLeft="40dip"
                android:layout_marginTop="30.0dip"
                android:background="@drawable/button3"
                android:onClick="click"
                android:text="@string/login" />

            <Button
                android:id="@+id/login_btn_quit"
                android:layout_width="100.0dip"
                android:layout_height="30.0dip"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/TextView02"
                android:layout_marginRight="40dip"
                android:layout_marginTop="30.0dip"
                android:background="@drawable/button3"
                android:text="@string/quit" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>